--- a/README
+++ b/README
@@ -9,7 +9,7 @@ Server
 ```bash
 cd testpython/
 
-python3 streamlit run app.py
+streamlit run app.py
 ```
 Overview:
 The following code allows the reading of a PDF file and facilitates the obtaining of information of the same one, by means of the accomplishment of questions through a chat (Chatgpt).
